[project]
name = "snowflake"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "durationpy>=0.9",
    "fastapi[all,standard]>=0.115.12",
    "joserfc>=1.0.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.1.0",
]
dynamic = ["version"]

[tool.ruff.lint]
ignore = ["F403"]
extend-select = ["I"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
